--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.24.7",
+    "@vue/runtime-dom": "^3.4.31",
     "axios": "^1.7.2",
     "core-js": "^3.37.1",
     "element-ui": "^2.6.3",
